2020-05-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peep.c:
	  Implement RFE #676.

2020-05-03 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asz80/z80mch.c,
	  src/z80/gen.c,
	  src/z80/peep.c:
	  Support Z80N mlt and swap instructions, part of RFE #573, #656.

2020-05-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve stack parameter pushing, overlaps with RFE #676.

2020-05-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a bug in pushing on-stack-parameters on r2k.

2020-05-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Improve ifx on 8-bit value (remaining part of RFE #668).

2020-05-02 Philipp Klaus Krause <pkk AT spth.de>

	* Merge z80n branch.

2020-05-02 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr88714.c:
	  Bug #2949 wasn't a bug, just lack of RAM resulting in a stack overflow.

2020-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Improve pointer write on rematerialized stack location.

2020-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  support/regression/tests/gcc-torture-execute-950511-1.c:
	  Fix bug #2938.

2020-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Improve pointer read on rematerialized stack location.

2020-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  support/regression/tests/gcc-torture-execute-20000113-1.c:
	  Fix bug #2937.

2020-04-26 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2995.c:
	  Disable test for mcs51, pdk until I find out how to place space_a segment in RAM in a regression test.

2020-04-25 Philipp Klaus Krause <pkk AT spth.de>

	* .version:
	  Bump version post 4.0.0-release.
	* src/SDCCsymt.c,
	  src/SDCCopt.c,
	  src/SDCCmem.c,
	  support/regression/tests/bug-2995.c:
	  Fix bug #2995.

2020-04-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
